--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href="/css/home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/layout.css">
+    
 </head>
 <body>
+   
+
+        <div class="container-fluid d-flex justify-content-end ">
+       
+          <a  href="/users/signin"><button class="btn btn-success mx-4 mt-2">Sign In</button></a>
+          <a  href="/users/signup"> <button class="btn btn-primary mx-4 mt-2">Sign Up</button></a>
+          <% if (locals.user) {%> 
+          <a  href="#"> <button class="btn btn-danger mx-4 mt-2">logout</button></a>
+          <%}%>
+       
+         
+        </div>
+
 <%- body %>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
