--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,2 @@
 <link rel = "stylesheet" href="/css/home.css">
-<h1>hello world!</h1>
+<marquee class=" container h2"> For login or signup click on the nav buttons---></marquee>
