--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,11 +1,14 @@
-<h1>Signin</h1>
+
 
 
 <div class="container">
 
+    <div class="h3 text-center">Sign In</div>
+
     <form action = "/users/create-session" method="post">
 
     <div class="row my-3">
+        <span class="h4 my-2">Email:</span>
         <div class="col"><input type = "email" placeholder="enter your email" name = "email" class="form form-control">
             </div>
 
@@ -13,6 +16,7 @@
     </div>
     <div class="row  my-3">
         <div class="col">
+        <span class="h4 my-2">Password:</span>
         <input type = "password" placeholder="enter your password" name = "password" class="form form-control"> 
         </div>
 
