--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,11 +13,14 @@
    
 
         <div class="container-fluid d-flex justify-content-end ">
-       
+          <% if (!locals.user) {%>
           <a  href="/users/signin"><button class="btn btn-success mx-4 mt-2">Sign In</button></a>
           <a  href="/users/signup"> <button class="btn btn-primary mx-4 mt-2">Sign Up</button></a>
+          <%}%>
           <% if (locals.user) {%> 
-          <a  href="#"> <button class="btn btn-danger mx-4 mt-2">logout</button></a>
+            <img src = "https://cdn-icons-png.flaticon.com/512/924/924915.png" class="m-1" style="height: 3%; width: 3%;">
+            <span class="h4 mt-1"><%= locals.user.name%></span>
+          <a  href="/users/logout"> <button class="btn btn-danger mx-4 mt-2">logout</button></a>
           <%}%>
        
          
@@ -25,7 +28,7 @@
 
 <%- body %>
 
-
+<%- script %>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
