--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,7 @@
 <div class="container">
 
+    <div class="h3 text-center">Sign Up</div>
+
     <form action="/users/create" method="post">
     <div class="row my-3">
         <div class="col"><input type = "text" placeholder="enter your name" name = "name" class="form form-control">
