--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,16 @@
 <link rel = "stylesheet" href="/css/home.css">
-<marquee class=" container h2"> For login or signup click on the nav buttons---></marquee>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col">
+<video width="97%" height = "97%" autoplay muted loop>
+    <source src="/images/home.mp4" type="video/mp4">
+</video>
+</div>
+<div class="col py-5">
+    <div class="h3 fs-1 my-5 text-center text-light">E-Commerce API's first Do login or SignUp before Add Product</div>
+
+</div>
+</div>
+</div>
+
+
