--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 
 <div class="container mt-5">
-    <div class="h3 text-center">Add Product</div>
+    <div class="h3 text-center text-light">Add Product</div>
     <form action="/products/create" method="post">
     <div class="row my-3">
         <div class="col">
