--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,9 +1,10 @@
 <div class="container">
 
-    <div class="h3 text-center">Sign Up</div>
+    <div class="h3 text-center text-light" >Sign Up</div>
 
     <form action="/users/create" method="post">
     <div class="row my-3">
+        <span class="h4 my-2">Name:</span>
         <div class="col"><input type = "text" placeholder="enter your name" name = "name" class="form form-control">
             </div>
 
@@ -11,6 +12,7 @@
     </div>
 
     <div class="row my-3">
+        <span class="h4 my-2">Email:</span>
         <div class="col"><input type = "email" placeholder="enter your email" name = "email" class="form form-control">
             </div>
 
@@ -18,6 +20,7 @@
     </div>
     <div class="row  my-3">
         <div class="col">
+            <span class="h4 my-2">Password:</span>
         <input type = "password" placeholder="enter your password" name = "password" class="form form-control"> 
         </div>
 
@@ -25,6 +28,7 @@
     </div>
     <div class="row  my-3">
         <div class="col">
+            <span class="h4 my-2">Confirm Password:</span>
         <input type = "password" placeholder="confirm password" name = "confirm_password" class="form form-control"> 
         </div>
 
