--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-    <div class="h3 text-center">Sign In</div>
+    <div class="h3 text-center text-light">Sign In</div>
 
     <form action = "/users/create-session" method="post">
 
