--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <link rel = "stylesheet" href="/css/home.css">
 <div class="container-fluid">
     <div class="row mt-5">
-        <div class="col">
+        <div class="col-sm-12 col-lg-6">
 <video width="97%" height = "97%" autoplay muted loop>
     <source src="/images/home.mp4" type="video/mp4">
 </video>
