--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,5 @@
-<div class="container">
+<link rel="stylesheet" href="/css/signup.css">
+<div class="container" id = "signup-container">
 
     <div class="h3 text-center text-light" >Sign Up</div>
 
