--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,20 +7,21 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/layout.css">
+    <%- style %>
     
 </head>
 <body>
    
 
-        <div class="container-fluid d-flex justify-content-end ">
+        <div class="container-fluid d-flex justify-content-end">
           <% if (!locals.user) {%>
-          <a  href="/users/signin"><button class="btn btn-success mx-4 mt-2">Sign In</button></a>
-          <a  href="/users/signup"> <button class="btn btn-primary mx-4 mt-2">Sign Up</button></a>
+          <a  href="/users/signin" id = "signin"><button class="btn btn-success " >Sign In</button></a>
+          <a  href="/users/signup" id = "signup"> <button class="btn btn-primary" >Sign Up</button></a>
           <%}%>
           <% if (locals.user) {%> 
-            <img src = "https://cdn-icons-png.flaticon.com/512/924/924915.png" class="m-1" style="height: 3%; width: 3%;">
-            <span class="h4 mt-1"><%= locals.user.name%></span>
-          <a  href="/users/logout"> <button class="btn btn-danger mx-4 mt-2">logout</button></a>
+            <img src = "https://cdn-icons-png.flaticon.com/512/924/924915.png">
+            <span class="h4"><%= locals.user.name%></span>
+          <a  href="/users/logout"> <button class="btn btn-danger" id = "logout">logout</button></a>
           <%}%>
        
          
